--- a/html_advanced/article.html
+++ b/html_advanced/article.html
@@ -11,13 +11,10 @@
 <body>
     <header>Header</header>
     <main>
-        <section>Hero section</section>
-        <section>Services section</section>
-        <section>Works section</section>
-        <section>About section</section>
-        <section>Latest news section</section>
-        <section>Testimonials section</section>
-        <section>Contact section</section>
+        Main content
+        <aside>
+            Aside
+        </aside>
     </main>
     <footer>Footer</footer>
 </body>
