--- a/html_advanced/24-index.html
+++ b/html_advanced/24-index.html
@@ -17,13 +17,15 @@
                 <a href="/"><span>Techium</span></a>
             </div>
             <nav>
-                <li><a href="/">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#works">Works</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#latest_news">Latest news</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -117,7 +119,7 @@
                     </article>
                     <article>
                         <p>Social</p>
-                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</h3>
+                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                     </article>
                 </div>
@@ -157,9 +159,11 @@
     <!-- Footer -->
     <footer>
         <div>
-            <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-            <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-            <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+            <ul>
+                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+            </ul>
         </div>
     </footer>
 </body>
