--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -8,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
+
 <body>
     <header></header>
     <main>
@@ -28,8 +30,14 @@
             </header>
             <h2>Heading with a subtitle</h2>
             <p>This is my subtitle</p>
-            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+            <p>
+                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
+                faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
+                varius montes viverra nibh in adipiscing blandit tempus accumsan.
+            </p>
         </section>
+
+        <!-- Lists -->
         <section>
             <header>
                 <h2>Lists</h2>
@@ -52,13 +60,17 @@
                     <dt>Definition List title</dt>
                     <dd>Definition text.</dd>
                     <dt>Startup</dt>
-                    <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                    <dd>A startup company or startup is a company or temporary organization designed to search for a
+                        repeatable and scalable business model.</dd>
                     <dt>Water</dt>
-                    <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                    <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is
+                        the basis of the fluids of living organisms.</dd>
                 </dl>
             </div>
+        </section>
         </section>
     </main>
     <footer></footer>
 </body>
+
 </html>
